# Nano

./: .clangd  .gitignore  CMakeLists.txt  NanoConfig.cmake.in  NanoMbedImpl.cmake  README.md  flake.nix
.github/workflows/: cachix.yml
Mbed/: CMakeLists.txt  MbedConfig.cmake.in
MbedIF/: CMakeLists.txt
MbedIF/include/: can_api.h  mbed.h
MbedIF/include/NanoHAL/: can.h
MbedIF/include/NanoMbed/: can.hpp  common.hpp  digital_out.hpp  hal.hpp  high_res_clock.hpp  pin_name.hpp  pwm.hpp  spi.hpp  thread.hpp  timer.hpp  uart.hpp
MbedIF/source/: digital_out.cpp
MbedIF/tests/: can.cpp  high_res_timer.cpp  pwm.cpp  spi.cpp  thread.cpp  timer.cpp  uart.cpp
MbedImpl/: CMakeLists.txt  README.md
MbedImpl/include/NanoMbedImpl/: can.hpp  digital_out.hpp  high_res_clock.hpp  pwm.hpp  rtos.hpp  spi.hpp  system.hpp  thread.hpp  timer.hpp  uart.hpp
MbedImpl/source/: can.cpp  digital_out.cpp  high_res_clock.cpp  pwm.cpp  rtos.cpp  spi.cpp  system.cpp  thread.cpp  timer.cpp  uart.cpp
MbedImplTests/: CMakeLists.txt  README.md  build.sh  impl_unit.cpp  mbed_app.json
MbedImplTests/tests/: CMakeLists.txt  can_test.cpp  digital_out_test.cpp  pwm_test.cpp  spi_test.cpp  timer_test.cpp  uart_test.cpp
MockImpl/: CMakeLists.txt
MockImpl/source/: digital_out.cpp
Nano/: CMakeLists.txt  NanoConfig.cmake.in  README.md
Nano/include/Nano/: angle.hpp  clock.hpp  fixed_map.hpp  linked_list.hpp  linked_list_node.hpp  managed_list.hpp  no_mutex_lifo.hpp  non_copyable.hpp  queue.hpp  result.hpp  scratch.hpp  singleton.hpp  span.hpp
Nano/tests/: test_angle.cpp  test_fixed_map.cpp  test_linked_list.cpp  test_managed_list.cpp  test_no_mutex_lifo.cpp  test_queue.cpp  test_result.cpp  test_singleton.cpp  test_span.cpp  test_vector.cpp
NanoHW/: CMakeLists.txt
NanoHW/docs/llm/: dispatching.md
NanoHW/include/NanoHW/: can.hpp  can_impl.hpp  digital_out.hpp  digital_out_impl.hpp  high_res_clock.hpp  high_res_clock_impl.hpp  parallel.hpp  pin.hpp  policies.hpp  pwm.hpp  pwm_impl.hpp  spi.hpp  spi_impl.hpp  system.hpp  system_impl.hpp  thread.hpp  thread_impl.hpp  timer.hpp  timer_impl.hpp  uart.hpp  uart_impl.hpp
NanoHW/src/: can.cpp  timer.cpp
StubImpl/: CMakeLists.txt
StubImpl/include/: can.hpp  digital_out.hpp  high_res_clock.hpp  pwm.hpp  rtos.hpp  spi.hpp  system.hpp  thread.hpp  timer.hpp  uart.hpp
StubImpl/source/: can.cpp  digital_out.cpp  high_res_clock.cpp  pwm.cpp  rtos.cpp  spi.cpp  system.cpp  thread.cpp  timer.cpp  uart.cpp
